--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=w3_homework
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/college?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=Pooja@086
+spring.datasource.username=//your db username
+spring.datasource.password=//your db password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
